--- a/templates/admin_panel/Applications.html
+++ b/templates/admin_panel/Applications.html
@@ -181,6 +181,7 @@
                                 <option value="" selected disabled>Select a form</option>
                                 <option value="ferpa_authorization">Authorization to Release Educational Records</option>
                                 <option value="texas_affidavit">Texas Residency Affidavit</option>
+                                <option value="texas_questionnaire">Texas Residency Questionnaire</option>
                             </select>
                         </div>
                         <div class="alert alert-info">
